--- a/resources/index.html
+++ b/resources/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 <h1>Index web page</h1>
+<div id="app">
+</div>
+<script src="js/compiled/chat.js" type="text/javascript"></script>
 </body>
+
 </html>
